[package]
name = "sighunter"
version = "0.1.0"
edition = "2024"

[lib]
name = "sighunter_lib"
path = "src/lib.rs"

[[bin]]
name = "sighunter"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
memflow = { version = "0.2", features = ["plugins"] }
once_cell = "1.21.3"
rayon = "1.11.0"
windows = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging"] }
winit = "0.29"
winit_input_helper = "0.15"


[target.'cfg(windows)'.dependencies]
memflow-native = { git = "https://github.com/memflow/memflow-native" }
